src/selector/Components/Selector.css
.popup {
    z-index: 1000;
    background: var(--th-popup);
    color: var(--th-popup-text);
    border-radius: 5px;
    padding: 6px 15px;
    margin-top: 3px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transition-property: box-shadow;
    transition-duration: 0.5s;
}
@media (prefers-color-scheme: dark) {
    .popup {
        border: 1px solid var(--th-popup-border);
    }
}
.popup.transparent {
    background: rgb(from var(--th-popup) r g b / 0.83);
    backdrop-filter: blur(10px);
}

.emoji-list {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
}

.searchText {
    font-size: x-small;
}

